--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #bababa;
+  background-color: #fff;
   padding: 0;
   margin: 0;
 }
@@ -129,7 +129,47 @@ body {
 }
 
 .searchbar {
+  margin-top: 50px;
   width: 360px;
   height: 42.7px;
   background-color: lightblue;
+  position: relative;
+  left: 38.2%;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255, 0.09);
+}
+
+.searchbar input {
+  margin: 10px;
+  height: 20px;
+  width: 230px;
+  outline: none;
+  border: none;
+  background-color: rgb(255, 255, 255, 0);
+  color: #ffff;
+  font-weight: 500;
+}
+
+.searchbar button {
+  width: 95px;
+  height: 33px;
+  border: none;
+  border-radius: 20px;
+}
+
+.searchbar input::placeholder {
+  color: #fff;
+  opacity: 0.5;
+  font-size: 14px;
+}
+
+.hero {
+  margin-top: 200px;
+  margin-left: 220px;
+}
+
+.hero img {
+  width: 1075px;
+  height: 654px;
+  border-radius: 20px;
 }
