--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   background-color: #fff;
   padding: 0;
   margin: 0;
+  font-family: inherit;
+  font-family: initial;
 }
 
 .bgImg {
@@ -19,7 +21,8 @@ body {
   justify-content: space-around;
   align-items: center;
   top: 0;
-  background-color: rgb(255, 255, 255, 0.01);
+  background-color: rgba(255, 255, 255, 0.085);
+  backdrop-filter: blur(10px); /* blur effect */
 }
 
 .logo {
@@ -37,7 +40,7 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 30px;
-  color: lab(100 0 0);
+  color: lab(0 0 0);
 }
 
 .nav-links .links {
@@ -60,7 +63,7 @@ body {
 }
 
 #btn1 {
-  color: lab(100 0 0);
+  color: lab(0 0 0);
   padding: 4.5px 12px;
   background-color: rgb(255, 255, 255, 0.09);
   font-size: 15px;
@@ -175,40 +178,211 @@ body {
 }
 
 .Knowledge {
-  width: 1497px;
+  width: 1500px;
   height: 1298px;
-  background-color: lightblue;
-  margin-top: 1000px;
+  background-color: lab(2.43% -0.12 -0.47 / 0.022);
+  border: 2px solid beige;
+  margin-top: 100px;
 }
 
 .explore {
   height: 210px;
   width: 1024px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 
   gap: 150px;
-  background-color: gray;
-  margin: 240px 240px 20px 240px;
+  margin: 100px 240px 20px 240px;
 }
+
+.explore h1 {
+  font-size: 40px;
+}
+.explore p {
+  font-size: 16px;
+}
+.explore h4 {
+  font-size: 12px;
+  color: rgba(11, 146, 11, 0.753);
+}
+
 .explore button {
-  margin-top: 110%;
+  width: 213px;
+  height: 39.1px;
+  border: none;
+  border-radius: 20px;
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  position: relative;
+  top: 150px;
 }
 
 .explore-2 {
   height: 210px;
   width: 1024px;
   display: flex;
-  background-color: gray;
+
+  gap: 50px;
   margin: 0px 240px 20px 240px;
+  justify-content: center;
+  align-items: center;
+}
+
+.explore-2 h1 {
+  font-size: 20px;
+}
+.explore-2 p {
+  font-size: 16px;
 }
 
 .explore-3 {
   height: 1177px;
   width: 595px;
-  margin: 0px 240px 20px 240px;
+  margin: 0px 240px 0px 240px;
+  margin-top: 70px;
 }
 
-.explore-3 img {
-  border: 20px;
+#anthropic {
+  border-radius: 20px;
+  display: block;
+}
+
+.texts {
+  position: relative;
+  color: #ffff;
+  bottom: 320px;
+  z-index: 1;
+  display: flex;
+
+  width: 896px;
+  gap: 120px;
+
+  padding-left: 67px;
+}
+
+#numbers {
+  font-size: 100px;
+}
+.texts p {
+  font-size: 16px;
+}
+
+#uppertext {
+  position: relative;
+  color: #fff;
+  bottom: 470px;
+  z-index: 1;
+  padding-left: 67px;
+}
+
+#uppertext p {
+  font-size: 16px;
+}
+
+#uppertext h3 {
+  font-size: 28.72px;
+  font-weight: 400;
+}
+
+.texts #number {
+  font-size: 20px;
+}
+
+#logs {
+  position: relative;
+  bottom: 260px;
+  right: 10px;
+}
+
+#logs img {
+  height: 80px;
+}
+
+.unlock-knowledge {
+  height: 884px;
+  width: 100%;
+}
+
+.knowledge-heading {
+  width: 1024px;
+  text-align: center;
+  height: 238px;
+  margin: 150px 200px 20px 240px;
+}
+
+.knowledge-heading p {
+  font-size: 18px;
+}
+
+.knowledge-heading h1 {
+  font-size: 44px;
+}
+
+#customer {
+  font-size: 18px;
+  color: rgba(11, 146, 11, 0.753);
+}
+
+.slidwindo {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  gap: 15px;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+
+.slidwindo img {
+  height: 290px;
+  width: 394px;
+  border-radius: 20px;
+}
+
+.slidwindo p {
+  font-size: 20px;
+}
+
+.compName {
+  width: 900px;
+  height: 210px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 370px;
+
+  margin-top: 430px;
+}
+
+.compName img {
+  height: 70px;
+  width: 200px;
+}
+
+.animation {
+  height: 534px;
+  width: 1024px;
+  display: flex;
+  margin-left: 270px;
+  gap: 20px;
+  margin-top: 100px;
+}
+
+.animation img {
+  width: 505px;
+  height: 534px;
+  border: 1px solid rgba(128, 128, 128, 0.311);
+  border-radius: 20px;
+}
+
+.animations-heading {
+  margin-top: 140px;
+  text-align: center;
+}
+
+.animation-2 img {
+  width: 1024px;
+  height: 664px;
+  margin-left: 275px;
+  border-radius: 20px;
+  border: 1px solid rgba(128, 128, 128, 0.311);
+  margin-top: 40px;
 }
